<resources>
    <string name="app_name">Intermediate Android</string>
    <string name="label_custom_view">Custom View</string>
    <string name="label_canvas">Canvas</string>
    <string name="label_animation">Animation</string>
    <string name="label_motion">Motion Layout</string>
    <string name="label_media" translatable="false">Media</string>
    <string name="label_substract" translatable="false">-</string>
    <string name="label_plus" translatable="false">+</string>
    <string name="label_zero" translatable="false">0</string>
    <string name="label_welcome_to_motion_layout">Welcome to Motion Layout</string>
    <string name="label_camera">Camera</string>
    <string name="label_camera_x">Camera X</string>
    <string name="label_gallery">Gallery</string>
</resources>